Add a contact page , some customization on the title of each page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Certifable</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <title><%=yield(:title)%> | Certifable</title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
