--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,6 @@
+<% provide(:title,'Help')%>
 <h1>Help</h1>
 <p>
-  THis is QnA Faq page on setting up and running your repo
+  This is QnA Faq page on setting up and running your repo
+
 </p>
