Finish layout and routes

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,25 @@
 <% provide(:title,'Help')%>
 <h1>Help</h1>
 <p>
-  This is QnA Faq page on setting up and running your repo
+  This is <strong>QnA Faq page </strong> on setting up and running your repo
 
+  <strong>  Step 1: Scratch my back </strong> <br> <br>
+  a.Sign up <br>
+  b.Log in <br>
+  c.Post certificates  CRUD certificate <br> 
+  d.Upload my certificate<br> 
+  e.CRUD user:supplier invite supplier and surrender usage <br>
+  f.CRUD user:customer invite customer and surrender usage of a single page. <br>
+  g.Dashboard my certificates status days left etc <br>
+  h.Dashboard dependent certificates of suppliers <br>
+  i.Download certificates book bounded  as pdf <br>
+  <br><br>
+  <strong>Step 2: Build MVP </strong><br><br>
+  a.Scale up to a small level ie 10 concurent users i<br>
+  c.Monetize <br>
+  <br>
+  but in the mean time <br> 
+  Attend quality certification confs and class <br>
+  Attend Fruit logistica and do 5 meetings <br>
+  
 </p>
