--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title,'About')%>
 <h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<p>Step 1: Scratch my Back(by Oct 30) =>Step 2: MVP(by Dec 31) </p>
