some work on login - needs more

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
     <div class="center jumbotron">
       <h1>Certifable Repos</h1>
       <h2> This is the home page of the quality certificates repo</h2>
-      <%= link_to "Sign up now!",'signup_path',class:"btn btn-lg btn-primary" %> 
+      <%= link_to "Sign up now!",signup_path,class:"btn btn-lg btn-primary" %> 
       <br>
       <br>
 </body>
