--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
           <ul class='nav navbar-nav navbar-right'>
             <li><%=link_to "Home",root_path %></li>
             <li><%=link_to "Help",help_path %></li>
-            <li><%=link_to "Log in",'login_path' %></li>
+            <li><%=link_to "Log in",login_path %></li>
           </ul>
         </nav>
       </div>
