untested advanced login and js log out bug needs fixing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -163,6 +163,24 @@ input{
   height:auto !important;
 }
 
+
+.checkbox{
+  margin-top:-10px;
+  margin-botom:10px;
+  span {
+    margin-left:20px;
+    font-weight:normal;
+  }
+}
+
+#session_remember_me{
+  width:auto;
+  margin-left:0;
+}
+p{
+  margin-top:10px;
+}
+
 #error_explanation {
   color: red;
   ul{
