--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="footer">
+  <div>
   <small>
     The certifable quality certificate repo 
   </small>
@@ -9,6 +10,7 @@
     <li><a href="https://www.sultanas.gr">sultanas.gr</a></li>
     </ul>
   </nav>
+  </div>
   </footer>
   
 
