--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
-@import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'bootstrap-sprockets';
 
 $grey-medium-light: #eaeaea;
 $grey-lighter: red;
@@ -146,6 +146,7 @@ aside {
 .gravatar{
   float:left;
   margin-right:10px;
+  margin-top:5px;
 }
 
 .gravatar_edit{
@@ -196,17 +197,19 @@ p{
     color:$state-danger-text;
   }
 
+  ul {
+  }
 
-  /* Users index*/ k
+  /* Users index*/ 
 .users {
-    
-    list-style-type: none;
+    list-style-type: circle ;
     margin: 0;
-    
     li{
       overflow: auto;
       padding: 10px 0;
       border-bottom: 1px solid red;
     }
   }
+
+
 }
