--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,16 @@
 <% provide(:title, 'All users')%>
 <h1> All users </h1>
 <%= will_paginate %>
-<ul class="users">
-  <%=render @users %>
+<ul style="list-style-type:none;">
+  <% @users.each do |user| %>
+  <li>
+    <%=gravatar_for user,size:15 %>
+    <%=link_to user.name,user %>
+    <% if current_user.admin? && !current_user?(user)%>
+      | <%=link_to 'delete',user, method: :delete, data:{confirm:"You sure to delete ?" } %>
+    <% end %> 
+    <li>
+    <%end%>
 </ul>
 
 <%= will_paginate%>
