navbar and  jumbotron color change

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <header class="navbar navbar-fixed-top ">
       <div class='container'>
-        <%=link_to 'certifable',root_path,id:'logo'%>
+        <%=link_to 'certifable',root_path,id:'logo',class:"navbar-logo"%>
         <nav>
           <ul class='nav navbar-nav navbar-right'>
             <li><%=link_to "Home",root_path %></li>
