--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,9 @@ body {
   padding-top: 60px;
 }
 
+.jumbotron {
+    background-color: #eeeeee00;
+}
 section {
   overflow: auto;
 }
@@ -57,7 +60,7 @@ p {
   float:left;
   margin-right: 10px;
   font-size: 1.7em;
-  color:#fff;
+  color:#147db1;
 //  text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -210,6 +213,5 @@ p{
       border-bottom: 1px solid red;
     }
   }
-
 
 }
