small changes on static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title)%>
+<% provide(:title, "Home")%>
 
 
 <html>
   <head>
-    <title><%=yield(:title)%></title>
+    <title><%=yield(:title) %> | Certifable</title>
   </head>
   <body>
     <div class="center jumbotron">
