--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,9 @@
   </head>
   <body>
     <div class="center jumbotron">
-      <h1>Certifable Repos</h1>
-      <h2> This is the home page of the quality certificates repo</h2>
+      <h1>Repos</h1>
+      <h2>Report generations</h2>
+      
       <%= link_to "Sign up now!",signup_path,class:"btn btn-lg btn-primary" %> 
       <br>
       <br>
