--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,10 @@
 <footer class="footer">
   <div>
   <small>
-    The certifable quality certificate repo 
+    Reports of Sultanas 
   </small>
   <nav>
     <ul>
-      <li><%=link_to "About" ,about_path %></li>
-    <li><%=link_to "Contact" ,contact_path %></li>
     <li><a href="https://www.sultanas.gr">sultanas.gr</a></li>
     </ul>
   </nav>
